--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,10 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-react": "^7.25.9",
     "@material-tailwind/react": "^2.1.10",
+    "@stomp/stompjs": "^7.0.0",
     "aos": "^2.3.4",
+    "axios": "^1.7.7",
+    "node-polyfill-webpack-plugin": "^4.0.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2",
+    "redux": "^5.0.1",
+    "redux-thunk": "^3.1.0",
+    "sockjs-client": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
