--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,7 +12,10 @@
   "dependencies": {
     "@babel/preset-env": "^7.26.0",
     "@babel/preset-react": "^7.25.9",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@material-tailwind/react": "^2.1.10",
+    "@mui/material": "^6.3.0",
     "@stomp/stompjs": "^7.0.0",
     "aos": "^2.3.4",
     "axios": "^1.7.7",
