--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -19,6 +19,8 @@
     "@stomp/stompjs": "^7.0.0",
     "aos": "^2.3.4",
     "axios": "^1.7.7",
+    "emoji-picker-react": "^4.12.0",
+    "firebase": "^11.1.0",
     "node-polyfill-webpack-plugin": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
