--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -22,6 +22,7 @@
     "emoji-picker-react": "^4.12.0",
     "firebase": "^11.1.0",
     "node-polyfill-webpack-plugin": "^4.0.0",
+    "prop": "^0.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
