--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@heroicons/react": "^2.2.0",
     "@material-tailwind/react": "^2.1.10",
     "aos": "^2.3.4",
     "chakra-ui": "^0.3.9",
+    "date-fns": "^4.1.0",
+    "emoji-picker-react": "^4.12.0",
     "react-icon": "^1.0.0",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.27.0"
