--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -14,6 +14,8 @@
     "@babel/preset-react": "^7.25.9",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@material-tailwind/react": "^2.1.10",
     "@mui/material": "^6.3.0",
     "@stomp/stompjs": "^7.0.0",
@@ -21,11 +23,14 @@
     "axios": "^1.7.7",
     "emoji-picker-react": "^4.12.0",
     "firebase": "^11.1.0",
+    "framer-motion": "^11.18.1",
     "node-polyfill-webpack-plugin": "^4.0.0",
-    "prop": "^0.1.1",
+    "prop": "^0.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
     "react-redux": "^9.1.2",
+    "react-router-dom": "^7.1.1",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
     "sockjs-client": "^1.6.1"
@@ -43,6 +48,6 @@
     "globals": "^15.11.0",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.14",
-    "vite": "^5.4.9"
+    "vite": "^5.4.11"
   }
 }
