--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -16,6 +16,7 @@
     "@emotion/styled": "^11.14.0",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@heroicons/react": "^2.2.0",
     "@material-tailwind/react": "^2.1.10",
     "@mui/material": "^6.3.0",
     "@stomp/stompjs": "^7.0.0",
@@ -24,13 +25,14 @@
     "emoji-picker-react": "^4.12.0",
     "firebase": "^11.1.0",
     "framer-motion": "^11.18.1",
+    "lucide-react": "^0.473.0",
     "node-polyfill-webpack-plugin": "^4.0.0",
     "prop": "^0.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^7.1.1",
+    "react-router-dom": "^7.1.3",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
     "sockjs-client": "^1.6.1"
