--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -22,6 +22,7 @@
     "@stomp/stompjs": "^7.0.0",
     "aos": "^2.3.4",
     "axios": "^1.7.7",
+    "date-fns": "^4.1.0",
     "emoji-picker-react": "^4.12.0",
     "firebase": "^11.1.0",
     "framer-motion": "^11.18.1",
